--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@
 /* colors and typography */
 
 
-body { background-color: #a4a67e; background-image: url('bakgrund2.png'); background-size: 50%; background-repeat: no-repeat; background-position: top center; }
+body { background-color: #a4a67e; background-image: url('Mejstedt.se.png'); background-size: 50%; background-repeat: no-repeat; background-position: top center; }
 body, th, tr, td, p { font-family: 'Open Sans Condensed', sans-serif; }
 #inner-container { border: 5px solid #5b5c46; }
 h1 { color: #000; margin: 0; font-size: 3.5em; }
