--- a/main.css
+++ b/main.css
@@ -37,14 +37,41 @@
 }
 
 /* colors and typography */
-body { background-color: #a4a67e; /*background-image: url('Mejstedt.se.png');*/ background-size: 50%; background-repeat: no-repeat; background-position: top center; }
-body, th, tr, td, p { font-family: 'Open Sans Condensed', sans-serif; }
+body { 
+	background-color: #a4a67e; 
+	/*background-image: url('Mejstedt.se.png');*/ 
+	background-size: 50%; 
+	background-repeat: no-repeat; 
+	background-position: top center; 
+}
+
+body, th, tr, td, p { 
+	/*font-family: 'Open Sans Condensed', sans-serif;*/ 
+}
+
 vertical-align: middle;
 }
-#inner-container { border: 5px solid #5b5c46; }
-h1 { color: #000; margin: 0; font-size: 3.5em; }
-a:link, a:visited { color: #be6b0c; text-decoration: none; }
-a:hover, a:active { color: #884c07; text-decoration: underline; }
+
+#inner-container { 
+	border: 5px solid #5b5c46; 
+}
+
+h1 { 
+	color: #000; 
+	margin: 0; 
+	font-size: 3.5em; 
+}
+
+a:link, a:visited { 
+	color: #be6b0c; 
+	text-decoration: none; 
+}
+
+a:hover, a:active { 
+	color: #884c07; 
+	text-decoration: underline; 
+}
+
 ul { margin: 0; padding: 0;}
 li { list-style-type: none; padding: 2px; }
 li img { vertical-align: sub; }
